tests/ui/liveness/liveness-closure-require-ret.stderr
error[E0308]: mismatched types
  --> $DIR/liveness-closure-require-ret.rs:2:37
   |
LL | fn main() { println!("{}", force(|| {})); }
   |                                     ^^ expected `isize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
